Revision history for {{$dist->name}}

{{$NEXT}}

0.21      2012-10-24 13:41:44 America/New_York
  - added AnyEvent::Open3::Simple
  - added Lingua::Alphabet::Phonetic::LAPD
  - added Mojolicious::Plugin::Ident

0.2       2012-08-29 08:09:14 EST5EDT
  - remove Test::Strict (doesn't seem to like windows)

0.1       2012-08-11 13:14:39 America/New_York
  - initial version